# kubia-timer

./: Cargo.toml  flake.nix
src/: application.rs  main.rs
src/data/: mod.rs  session.rs  solve.rs
src/gui/: application.rs
src/gui/application/: preferences.rs
src/tangible/: mod.rs  pattern.rs  theme.rs
src/tangible/theme/: palette.rs
