[package]
name = "kubia-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["default_system_font", "smol"] }
iced_lazy = { version = "0.6.1" }

log = "0.4.0"
env_logger = "0.9.0"
