[package]
name = "kubia-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["default_system_font", "async-std", "debug", "palette"] }
iced_lazy = { version = "0.6.1" }

once_cell = "1.17.1"

async-std = "1.12.0"

palette = "0.6.1"

log = "0.4.0"
env_logger = "0.9.0"
